#142: Constructor 'Number(String)' has been deprecated in Java 9.
Using 'Number.valueOf' instead.